Combine feedback comment DTOs